# steelspanpy

./: .gitignore  README.md  init_project.py  loads.py  pyproject.toml  requirements.txt
.spyproject/config/: workspace.ini
.spyproject/config/backups/: workspace.ini.bak
scripts/: init_project.py
steelspanpy/: README.md  __init__.py  config.py  devtools.py  elements.py  etabs_connect.py  function_list.txt  geometry.py  init_suggestion.txt  loads.py  main.py  materials.py  model.py  sections.py  seismic.py  utils.py  wind.py
steelspanpy/examples/deneme/: deneme.$et  deneme.EDB
steelspanpy/examples/khjh/: khjh.$et  khjh.EDB
steelspanpy/examples/sondeneme/: sondeneme.$et  sondeneme.EDB
steelspanpy/utils/: __init__.py  geometry.py  loads.py  sections.py  spectrum.py
