[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "steelspanpy"
version = "0.1.0"
description = "Automatic steel industrial building model generator for ETABS"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "comtypes",
    "anthropic",
]

[project.scripts]
steelspanpy = "steelspanpy.main:main"
